# Medical_Codes_RAG

./: .gitignore  BLIS_ERROR_FIX.md  DEEPEVAL_MIGRATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  README.md  SESSION_REFERENCE.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_TROUBLESHOOTING.md  deploy.bat  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test_advanced_features.py  test_deepeval_local.py  test_enhanced_retrieval.py  test_ragas_config.py
ICD10-CM Code Descriptions 2025/: opc-cpt-pcm-nhsn.xlsx
data/: cpt_processed.csv  gold_set.json
notebooks/: demo_rag_poc.ipynb
scripts/: inspect_targets.ps1
src/: __init__.py  data_loader.py  embedding_finetuning.py  eval.py  evaluation_advanced.py  evaluation_deepeval.py  generation.py  retrieval.py  retrieval_enhanced.py  streamlit_app.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_retrieval.py
